# fitrl

./: .env.template  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  output.csv  pyproject.toml
data/annotations/: annotations.csv
data/processed/: output.csv  sample.csv
pipeline/: annotate.py  config.py  dataset.py  intervals.py  parse.py  pydantic.py  split.py  train.py
