[project]
name = "fit-interpretation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "fitparse>=1.2.0",
    "pandas>=2.0.0",
    "peft>=0.19.1",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "transformers>=5.12.1",
    "trl>=1.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty>=0.0.44",
]
